--- a/room-trading-app/src/Login.css
+++ b/room-trading-app/src/Login.css
@@ -5,6 +5,16 @@ body {
     background-color: white; /* Main background color */
     color: #333; /* Text color */
   }
+
+  .login-page
+  {
+    height: 100vh;
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+  }
   
   .login {
     max-width: 400px;
@@ -13,6 +23,9 @@ body {
     border: 1px solid #ccc;
     border-radius: 8px;
     background-color: white; /* White background for form */
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
   }
   
   .login h2 {
